all controller like apis are working as per now like all/register/email/verify/